# hedge-coding

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md  build.rs  install.ps1  install.sh  models.json  tauri.conf.json
.github/workflows/: release.yml
capabilities/: default.json
docs/: GitHub的建议.md  cheap-coder-spec.md  core-technology.md  cost-analysis.md  model-config.md  token-savings.md  ui-architecture.md
icons/: icon.icns
src/: analyzer.rs  compiler.rs  config.rs  git_intel.rs  main.rs  parser.rs  repo_map.rs  scanner.rs  server.rs  token_counter.rs  watcher.rs
src-ui/: index.html  package-lock.json  package.json  vite.config.ts
src-ui/src/: App.tsx  main.tsx  tauri.ts
src-ui/src/components/center/: CenterPanel.css  CenterPanel.tsx  ClaudeMd.css  CodeReview.css  CodeReview.tsx  DocGen.css  DocGen.tsx  HedgePrinciples.css  HedgePrinciples.tsx  ModelPricing.css  ModelPricing.tsx  RepoMap.css  RepoMap.tsx  Skills.css  Skills.tsx  SuperPrompt.tsx  hedge-content.ts
src-ui/src/components/common/: ErrorBoundary.tsx  ScrollPanel.css  TitleBar.tsx
src-ui/src/components/left/: Explorer.css  Explorer.tsx
src-ui/src/components/right/: Compiler.css  Compiler.tsx
src-ui/src/i18n/: en.ts  useT.ts  zh-CN.ts
src-ui/src/store/: app-state.tsx
src-ui/src/styles/: global.css
ui/: app.js  i18n.js  index.html  style.css
